--- a/src/static/main.css
+++ b/src/static/main.css
@@ -1,3 +1,7 @@
+:root {
+    --controls-color: red;
+}
+
 #custom_video {
     position: relative;
     max-width: 480px;
@@ -6,7 +10,7 @@
     height: calc(100vw/16*9);
 }
 
-#control_button {
+#play_pause_button {
     display: block;
     width: 30px;
     height: 30px;
@@ -35,7 +39,7 @@
     margin-left: 8%;
 }
 
-div#control_button:hover {
+div#play_pause_button:hover {
     background-color: #ff149370;
 }
 
@@ -59,11 +63,9 @@ div#control_button:hover {
 #fullscreen {
     width: 15px;
     height: 15px;
-    position: absolute;
-    border: 2px solid red;
-    right: 5px;
-    bottom: 5px;
+    border: 2px solid var(--controls-color);
     transition: 0.3s;
+    margin-right: 5px;
 }
 
 #fullscreen:hover {
@@ -71,20 +73,58 @@ div#control_button:hover {
 }
 
 #progress_bar {
-    width: calc(100% - 4px - 31px);
+    width: calc(100% - 6px);
+    /*
     position: absolute;
-    bottom: 10px;
+    bottom: 30px;
     left: 3px;
+    */
     height: 4px;
     background-color: #d3d3d36b;
     border-radius: 2px;
+    margin-left: 2px;
 }
 
 #current_position {
-    background-color: red;
+    background-color: var(--controls-color);
     width: 1%;
     height: 4px;
     border-radius: 2px;
     max-width: 100%;
     min-width: 1%;
+}
+
+#controls {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 3px;
+    justify-content: space-between;
+    transition: all 1s ease;
+    opacity: 1;
+    flex-wrap: wrap;
+}
+
+#restart {
+    color: var(--controls-color);
+}
+
+#restart,
+#fullscreen,
+#play_pause_button
+{
+    cursor: pointer;
+}
+
+#timer {
+    color: white;
+    font-size: 10px;
+    font-family: Helvetica;
+    display: block;
+}
+
+#left_controls {
+    display: flex;
+    align-items: center;
 }
