--- a/src/static/main.css
+++ b/src/static/main.css
@@ -3,6 +3,15 @@
     --square-elements-wh: 15px;
 }
 
+.disable-text-selection {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 #custom_video {
     position: relative;
     max-width: 480px;
@@ -75,21 +84,25 @@ div#play_pause_button:hover {
 
 #progress_bar {
     width: calc(100% - 6px);
-    /*
-    position: absolute;
-    bottom: 30px;
-    left: 3px;
-    */
     height: 4px;
     background-color: #d3d3d36b;
     border-radius: 2px;
     margin-left: 2px;
+    cursor: pointer;
+    transition: all 0.2s linear;
+}
+
+#progress_bar_block {
+    display: flex;
+    align-items: center;
+    height: 6px;
+    width: 100%;
 }
 
 #current_position {
     background-color: var(--controls-color);
     width: 1%;
-    height: 4px;
+    height: 100%;
     border-radius: 2px;
     max-width: 100%;
     min-width: 1%;
@@ -131,7 +144,7 @@ div#play_pause_button:hover {
 }
 
 #progress_bar:hover {
-    cursor: pointer;
+    height: 100%;
 }
 
 #volume {
@@ -198,15 +211,25 @@ div#play_pause_button:hover {
 }
 
 .volume_slider {
-    display: none;
-    width: 40px;
-    height: 2px;
+    width: 0;
+    height: 4px;
     border-radius: 2px;
     margin-left: 2px;
     background-color: rgba(255, 255, 255, 0.5);
-    transition: opacity 0.3s;
+    transition: all 0.3s cubic-bezier(.25, .1, .25, 1);
 }
 
 #volume_block:hover .volume_slider {
-    display: block;
+    width: 40px;
+    margin-right: 3px;
+    cursor: pointer;
+}
+
+#current_volume {
+    height: 4px;
+    width: 50%;
+    background-color: #ffffff;
+    border-radius: 2px;
+    min-width: 0;
+    max-width: 100%;
 }
